# SWVO

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.md  README.md  download_daily_files.py  examples_tests.py  install.sh  omni_highres_output.csv  pyproject.toml  requirements.txt  ruff.toml  run_downloads.sh  setup.py  test_output.csv  test_swvo.py
.github/workflows/: docs.yml  docs_pdf.yml  publish_pypi.yml  pyright.yml  reuse_compliance.yml  tests.yml
check/: base_file_checker.py
data_management/check/: __init__.py  base_file_checker.py
data_management/check/wp2/: __init__.py  check_swift.py
data_management/check/wp3/: __init__.py  check_kp.py  check_plasma.py
data_management/check/wp6/: __init__.py  check_rbm_forecast.py  check_ring_current.py
data_management/exceptions/: __init__.py
data_management/formats/wp3/: __init__.py  kp_formats.py
data_management/io/: __init__.py  base_file_reader.py  decorators.py  utils.py
data_management/io/RBMDataSet/: RBMDataSet.py  RBMDataSetElPaso.py  RBMDataSetManager.py  __init__.py  bin_and_interpolate_to_model_grid.py  custom_enums.py  interp_functions.py  utils.py
data_management/io/RBMDataSet/scripts/: create_RBSP_line_data.py
data_management/io/dst/: __init__.py  omni.py  read_dst_from_multiple_models.py  wdc.py
data_management/io/f10_7/: __init__.py  omni.py  read_f107_from_multiple_models.py  read_f107_with_backups.py  swpc.py
data_management/io/hp/: __init__.py  ensemble.py  gfz.py  read_hp_from_multiple_models.py  read_hp_with_backups.py
data_management/io/kp/: __init__.py  ensemble.py  niemegk.py  omni.py  read_kp_from_multiple_models.py  read_kp_with_backups.py  swpc.py
data_management/io/omni/: __init__.py  omni_high_res.py  omni_low_res.py
data_management/io/plasmasphere/: __init__.py  read_plasmasphere.py  read_plasmasphere_combined_inputs.py
data_management/io/solar_wind/: __init__.py  ace.py  dscovr.py  omni.py  read_solar_wind_from_multiple_models.py  read_solar_wind_with_backups.py  swift.py
data_management/io/wp2/: __init__.py  read_rt_ace.py  read_rt_dscovr.py  read_swift.py
data_management/io/wp3/: __init__.py  read_hp.py  read_hp60.py  read_kp.py  read_plasmasphere.py  read_plasmasphere_combined_inputs.py
data_management/notifications/: __init__.py  email_notifier.py
data_management/plotting/: __init__.py  plotting_base.py
data_management/plotting/kp_hp/: __init__.py  plot_kp_hp.py
data_management/plotting/plasmasphere/: __init__.py  plasmasphere_plot.py
data_management/plotting/swift/: __init__.py  plot_swift.py
data_management/plotting/wp2/swift/: __init__.py  plot_swift.py
data_management/plotting/wp3/hp60/: __init__.py  plot_hp60.py
data_management/plotting/wp3/kp/: __init__.py  plot_kp.py
data_management/plotting/wp3/kp_hp/: __init__.py  plot_kp_hp.py
docker/: Dockerfile  build_base_image.sh  check_entrypoint.sh  make_check.sh  make_plots.sh  plot_all_docker.sh  plot_entrypoint.sh
docker/check_file_generation/: Dockerfile  build_image.sh  run_file_check.sh
docker/plot/: Dockerfile  build_image.sh  run_plotting.sh
docker/plotting/: Dockerfile  build_image.sh  run_plotting.sh
docs/: CONTRIBUTING.md  changelog.rst  conf.py  index.rst  makefile  requirements.txt
docs/examples/: solar_wind_example.ipynb
exceptions/: outputs.py
io/wp3/: read_kp.py
k8s/: deploy_check.yaml  deploy_plotting.yaml
local/: make_local_environment.sh  make_plots.sh  run_checks.sh  run_plotting.sh
notifications/: email.py
plotting/: plotting_base.py
plotting/wp3/: plot_gfz_plasma.py
plotting/wp3/kp/: plot_kp.py
scripts/check_file_generation/: check_all_outputs.py  requirements.txt
scripts/data_products/wp3/: create_kp_products.py  evaluate_forecast.py
scripts/docker_backup/: backup_images.sh
scripts/evaluation/wp3/: evaluate_kp_performance.py
scripts/plot/: requirements.txt
scripts/plot/wp2/: plot_all_swift.py
scripts/plot/wp3/: plot_all_kp.py  plot_all_plasma.py
scripts/web/: requirements.txt
scripts/web/dashboard/: dashboard.py
scripts_deprecated/data_products/wp3/: create_kp_products.py
swvo/: __init__.py  logger.py
swvo/io/: __init__.py  decorators.py  exceptions.py  utils.py
swvo/io/RBMDataSet/: RBMDataSet.py  RBMDataSetElPaso.py  RBMDataSetManager.py  RBMNcDataSet.py  __init__.py  bin_and_interpolate_to_model_grid.py  custom_enums.py  identify_orbits.py  interp_functions.py  linearize_trajectories.py  utils.py
swvo/io/dst/: __init__.py  omni.py  read_dst_from_multiple_models.py  wdc.py
swvo/io/f10_7/: __init__.py  omni.py  read_f107_from_multiple_models.py  swpc.py
swvo/io/hp/: __init__.py  ensemble.py  gfz.py  read_hp_from_multiple_models.py
swvo/io/kp/: __init__.py  ensemble.py  niemegk.py  omni.py  read_kp_from_multiple_models.py  swpc.py
swvo/io/omni/: __init__.py  omni_high_res.py  omni_low_res.py
swvo/io/plasmasphere/: __init__.py  read_plasmasphere.py  read_plasmasphere_combined_inputs.py
swvo/io/solar_wind/: __init__.py  ace.py  dscovr.py  omni.py  read_solar_wind_from_multiple_models.py  swift.py
swvo/io/symh/: __init__.py  omni.py
tests/: test_logger.py
tests/io/: test_logger.py  utils.py
tests/io/RBMDataSet/: test_RBMDataset.py  test_RBMDatasetElPaso.py  test_RBMDatasetManager.py  test_RBMNcDataset.py  test_identify_orbits.py  test_linearize_trajectories.py  test_utils.py
tests/io/dst/: test_dst_omni.py  test_omni.py  test_read_dst_from_multiple_models.py  test_wdc.py
tests/io/f10_7/: test_f107omni.py  test_read_f107_from_multiple_models.py  test_swpc.py
tests/io/hp/: test_hp.py  test_hp_ensemble.py  test_read_hp_from_multiple_models.py
tests/io/kp/: test_kp_ensemble.py  test_kp_niemegk.py  test_kp_omni.py  test_kp_swpc.py  test_read_kp_from_multiple_models.py
tests/io/omni/: test_omni_high_res.py  test_omni_low_res.py
tests/io/solar_wind/: test_ace.py  test_dscovr.py  test_omni.py  test_read_solar_wind_from_multiple_models.py  test_swift.py
tests/io/symh/: test_symh_omni.py
tests/unittests/io/: test_base_file_reader.py
(+224 files in other folders)
